fixed scrollbar showing on firefox, lined up with year with job titles

--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -38,7 +38,6 @@
 
     @media only screen and (max-width: 600px) {
       flex-direction: row;
-      transform: translateX();
       transform: translateY(5.25em);
     }
     &:hover {
@@ -50,6 +49,8 @@
     }
   }
   h2 {
+    display: flex;
+    justify-content: space-between;
     color: hsl(140, 100%, 70%);
     margin-left: 1rem;
     animation: section-job 3s linear infinite;
@@ -65,13 +66,30 @@
         text-shadow: none;
       }
     }
+    .year {
+      color: hsl(400, 100%, 70%);
+      font-size: 80%;
+      margin: 5px;
+      font-style: italic;
+      animation: section-year 3s linear infinite;
+    
+      @keyframes section-year {
+        0% {
+          text-shadow: none;
+        }
+        50% {
+          text-shadow: 0 0 25px hsl(400, 100%, 70%);
+        }
+        100% {
+          text-shadow: none;
+        }
+      }
+    }
   }
   .projects {
     font-style: normal;
   }
   h3 {
-    display: flex;
-    justify-content: space-between;
     color: hsl(180, 100%, 70%);
     margin-left: 2rem;
     font-style: italic;
@@ -87,23 +105,6 @@
       100% {
         text-shadow: 0 0 25px hsl(180, 100%, 70%);
       }
-    }
-    .year {
-      color: hsl(400, 100%, 70%);
-      margin: 5px;
-      animation: section-year 3s linear infinite;
-    
-    @keyframes section-year {
-      0% {
-        text-shadow: none;
-      }
-      50% {
-        text-shadow: 0 0 25px hsl(400, 100%, 70%);
-      }
-      100% {
-        text-shadow: none;
-      }
-    }
     }
   }
   ul {
