--- a/src/styles/technical.scss
+++ b/src/styles/technical.scss
@@ -2,7 +2,6 @@
   transition: 1s;
   @media only screen and (max-width: 600px) {
     margin-left: -11em;
-    margin-top: 5em;
   }
   h1 {
     font-size: 160%;
